Bug 313637 - different volumes on the same drive are listed with the same name
Summary: different volumes on the same drive are listed with the same name
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: Device Viewer (other bugs)
Version First Reported In: 4.9.98 RC3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-21 16:29 UTC by Alin M Elena
Modified: 2013-01-22 19:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-01-21 16:29:18 UTC
different volumes on the same drive are listed with the same name making the things confusing.

the same is true for serial ports.



Reproducible: Always
Comment 1 Jekyll Wu 2013-01-22 19:42:40 UTC
commit 8ed18efa17e6b53fa1f7665940341ef38f6f02f5
Author: Alin M Elena <alinm.elena@gmail.com>
Commit: Tomáš Chvátal <tchvatal@suse.cz>

    Kinfocenter: use unique names for some subdevices
    
    The names for disk devices are now the mount names (sda1) instead of
    using the product name, which is same for all the partitions.
    
    REVIEW: 108529
    BUG: 313637
    
    Signed-off-by: Tomáš Chvátal <tchvatal@suse.cz>