Kinfocenter: use unique names for some subdevices

The names for disk devices are now the mount names (sda1) instead of
using the product name, which is same for all the partitions.

REVIEW: 108529
BUG: 313637

Signed-off-by: Tomáš Chvátal <tchvatal@suse.cz>